Name:                xlsx-templater

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.0

Synopsis:            Simple and incomplete Excel file templater
Description:
    Library for creating xlsx data files from xlsx tempaltes.

Homepage:            https://github.com/qrilka/xlsx-templater
License:             MIT
License-file:        LICENSE
Author:              Kirill Zaborsky
Maintainer:          qrilka@gmail.com



Category:            Data
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.6


Library
  Hs-source-dirs:    src
  Exposed-modules:   Codec.Xlsx.Templater


Executable           test
  Hs-source-dirs:    src
  ghc-options:       -rtsopts -Wall -threaded -O2

  main-is:           Test.hs

  
  Build-depends:     base, containers, transformers, bytestring, text
                    , xlsx
                    , data-default == 0.4.*
                    , conduit      == 0.4.*
                    , parsec       == 3.1.*
                    , time
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
source-repository head
  type:     git
  location: git://github.com/qrilka/xlsx-templater.git

